[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/valkyr/valkyr_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://src/states/idle.gd" type="Script" id=3]
[ext_resource path="res://src/states/state_machine.gd" type="Script" id=4]
[ext_resource path="res://src/states/run.gd" type="Script" id=5]
[ext_resource path="res://src/states/air.gd" type="Script" id=6]
[ext_resource path="res://src/combat/combat.gd" type="Script" id=7]
[ext_resource path="res://src/combat/backSlash.gd" type="Script" id=8]
[ext_resource path="res://src/combat/slash.gd" type="Script" id=9]
[ext_resource path="res://src/combat/cleave.gd" type="Script" id=10]
[ext_resource path="res://src/player/climb_check.gd" type="Script" id=11]
[ext_resource path="res://src/states/climb.gd" type="Script" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 7.75, 6 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 31.625, 13.75 )

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerPosition/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=47]
resource_name = "backSlash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerPosition/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=49]
resource_name = "cleave"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00387174, 0.167886, 0.340665, 0.615749, 0.711925, 0.793588, 0.868053, 0.94069 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ 76, 77, 78, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerPosition/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.595464, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/combat/cleave")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.596672, 0.998075 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "_set_moving"
}, {
"args": [ false ],
"method": "_set_moving"
} ]
}

[sub_resource type="Animation" id=43]
resource_name = "fall"
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=42]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=44]
resource_name = "jump"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}

[sub_resource type="Animation" id=45]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=46]
resource_name = "slash"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerPosition/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerPosition/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Player" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -23 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 1, -42 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayerPosition"]
position = Vector2( 13, 0 )
texture = ExtResource( 2 )
hframes = 8
vframes = 4

[node name="ClimbCheck" type="Area2D" parent="PlayerPosition"]
position = Vector2( 95, -5 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPosition/ClimbCheck"]
position = Vector2( -79, -6 )
shape = SubResource( 50 )

[node name="Hitbox" type="Area2D" parent="PlayerPosition"]
position = Vector2( 59, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPosition/Hitbox"]
position = Vector2( -1, 16 )
shape = SubResource( 48 )
disabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="run" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="air" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="combat" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="slash" type="Node" parent="StateMachine/combat"]
script = ExtResource( 9 )
damage = 20
knockback = Vector2( 120, 0 )

[node name="backSlash" type="Node" parent="StateMachine/combat"]
script = ExtResource( 8 )
damage = 10
knockback = Vector2( 60, 0 )

[node name="cleave" type="Node" parent="StateMachine/combat"]
script = ExtResource( 10 )
knockback = Vector2( 500, 0 )

[node name="climb" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 41 )
anims/backSlash = SubResource( 47 )
anims/cleave = SubResource( 49 )
anims/fall = SubResource( 43 )
anims/idle = SubResource( 42 )
anims/jump = SubResource( 44 )
anims/run = SubResource( 45 )
anims/slash = SubResource( 46 )
